--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
-    "dotenv": "^16.0.3",
-    "netlify-lambda": "^2.0.15"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "netlify-cli": "^12.2.8"
